adjust header for tables

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Author: Code with the Carolinas
      **** Black Mountain Volunteer Corps to update for LAST UPDATE DATE ****  
 
    Update by Typing over the Date, this is free text so you can format date and time as see fit-->
-   
+
   <p><strong>Last Updated: 15 October 2024</strong></p></br></p>
 
   <!-- 4. Official Town-Direct Resources 
@@ -101,7 +101,7 @@ Author: Code with the Carolinas
       <details class="tab-content">
     <summary>Table Name</summary>
 
-    <h2>Table Name</h2>
+    <br><h3>Table Name</h3>
     </p>
     <br>
     <div class="table-container">
@@ -137,6 +137,8 @@ Author: Code with the Carolinas
     <p><strong>Expand Resource Tables Below</strong></p></br></p>
     <details class="tab-content">
       <summary>Official Town-Directed Resources</summary>
+      <br>
+      <h3>Official Town-Directed Resources</h3>
       <table>
         <thead>
           <tr>
@@ -244,7 +246,7 @@ Author: Code with the Carolinas
       <details class="tab-content">
     <summary>Table Name</summary>
 
-    <h2>Table Name</h2>
+    <br><h3>Table Name</h3>
     </p>
     <br>
     <div class="table-container">
@@ -272,7 +274,8 @@ Author: Code with the Carolinas
 
  -->
   <h2>Unofficial Voluntary Resources (<i>Recursos Voluntarios no Officiales</i>)
-  </h2></br><p><strong>Expand Resource Tables Below</strong></p></br></p>
+  </h2></br>
+  <p><strong>Expand Resource Tables Below</strong></p></br></p>
   <p>INFORMATION PROVIDED ONLY AS A COURTESY; THE TOWN OF BLACK MOUNTAIN IS NOT RESPONSIBLE FOR THIS INFORMATION; <br>
     <i>(INFORMACIÓN PROVISTA SOLO COMO CORTESIA, EL PUEBLO DE BLACK MOUNTAIN NO ES RESPONSABLE POR ESTA INFORMACIÓN)</i>
   </p>
@@ -297,7 +300,8 @@ Author: Code with the Carolinas
 
     <!-- Hot Meals Table: Start
  **** Black Mountain Volunteer Corps to update for Up to date contents ****   -->
-    <h2>Hot Meals</h2>
+    <br>
+    <h3>Hot Meals</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <br>
@@ -337,8 +341,9 @@ Author: Code with the Carolinas
   <!-- Potable Water Table: Start -->
   <details class="tab-content">
     <summary>Potable Water Supply - Bring Your Own Jugs (<i>agua potable – traiga sus propias botellas</i>)</summary>
-    </nav><br>
-    <h2>Potable Water Supply - Bring your Own Jugs</h2>
+    </nav>
+    <br>
+    <h3>Potable Water Supply - Bring your Own Jugs</h3>
     <p>(<i>agua potable – traiga sus propias botellas</i>)</p>
     <div class="table-container">
       <table href="#subtab1-2">
@@ -379,7 +384,8 @@ Author: Code with the Carolinas
   <details class="tab-content">
     <summary>Medical & mental health care (<i>Atencion medica y Salud Mental</i>)</summary>
     <!-- Medical Table: Start -->
-    <h2>Medical & mental health care (<i>Atencion medica y Salud Mental</i>)</h2>
+    <br>
+    <h3>Medical & mental health care (<i>Atencion medica y Salud Mental</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <br>
@@ -428,7 +434,8 @@ Author: Code with the Carolinas
 
 
 
-    <h2>Pharmacies (<i>farmacias</i>)</h2>
+    <br>
+    <h3>Pharmacies (<i>farmacias</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     <div class="table-container">
       <table href="#subtab2-2">
@@ -484,7 +491,8 @@ Author: Code with the Carolinas
 
   <details class="tab-content">
     <summary>Mobile hot showers (<i>Regaderas calientes</i>)</summary>
-    <h2>Mobile hot showers (<i>Regaderas calientes</i>)</h2>
+    <br>
+    <h3>Mobile hot showers (<i>Regaderas calientes</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     <div class="table-container">
       <table href="#subtab2-3">
@@ -520,7 +528,8 @@ Author: Code with the Carolinas
   <!-- Veterniary  Table: Start -->
   <details class="tab-content">
     <summary>Veterinary Care (<i>Veterinarios</i>)</summary>
-    <h2>Veterinary Care (<i>Veterinarios</i>)</h2>
+    <br>
+    <h3>Veterinary Care (<i>Veterinarios</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     <div class="table-container">
       <table href="#subtab2-4">
@@ -556,8 +565,9 @@ Author: Code with the Carolinas
         toallas</i>)</summary>
 
 
-    <h2>Clothing, shoes, blankets and towels (<i>ropa, zapatos, cobijas y
-        toallas</i>)</h2>
+    <br>
+    <h3>Clothing, shoes, blankets and towels (<i>ropa, zapatos, cobijas y
+        toallas</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <br>
@@ -590,9 +600,10 @@ Author: Code with the Carolinas
 
   <!-- Dry Goods: Start -->
   <details class="tab-content">
-    <summary>Dry goods & miscellaneous supplies distribution (<i>distribución de alimentos y provisiones</i>)</i>)
+    <summary>Dry goods & miscellaneous supplies distribution (<i>distribución de alimentos y provisiones</i>)</i>
     </summary>
-    <h2>Dry goods & miscellaneous supplies distribution (<i>distribución de alimentos y provisiones</i>)</h2>
+    <br>
+    <h3>Dry goods & miscellaneous supplies distribution (<i>distribución de alimentos y provisiones</i>)</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <div class="table-container">
@@ -659,7 +670,8 @@ Author: Code with the Carolinas
     <summary>FEMA Application Support</summary>
 
     <!-- Hot Meals Table  -->
-    <h2>FEMA Application Support</h2>
+    <br>
+    <h3>FEMA Application Support</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <br>
@@ -686,7 +698,8 @@ Author: Code with the Carolinas
 
   <details class="tab-content">
     <summary>General Disaster Relief</summary>
-    <h2>General Disaster Relief</h2>
+    <br>
+    <h3>General Disaster Relief</h3>
     <!-- <p>Details about the first official resource.</p> --> <br>
     </p>
     <div class="table-container">
