update for airtable vol form to open in new tab

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ Author: Code with the Carolinas
   <hgroup></br>
     <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2></br>
     <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp;
-      <a href="https://forms.gle/J2XJuHDAWMXzx2BP6">Volunteer Application</a>
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a>
+
   </hgroup>
   </br>
   <!--Mission Statement-->
