--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Author: Code with the Carolinas
   <hgroup></br>
     <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2></br>
     <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp;
+  <!--Volunteer link updated and links to airtable New Volunteer Signup Submissions form -->
       <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form">Volunteer Application</a>
   </hgroup>
   </br>
