add supply request form to index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@ Author: Code with the Carolinas
     <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2></br>
     <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp;
       <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a>
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pag6zET46pEUfCHCG/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a>
 
+
+      
   </hgroup>
   </br>
   <!--Mission Statement-->
