reoarder links and mission statement

--- a/index.html
+++ b/index.html
@@ -49,15 +49,26 @@ Author: Code with the Carolinas
 
 
     </a>
-  </div>
+  </div></br>
+  <p></p><strong>Mission Statement:</strong></br>
+  <p>
+    The Black Mountain Volunteer Corps is a community led coalition
+    dedicated to supporting volunteer initiatives, programs and actions of
+    community service in the wake of Hurricane Helene.
+  </p>
   <!--  3. Community Resource List, Links and Mission: 
   **** Black Mountain Volunteer Corps to update for changes to links, mission AND LAST UPDATE DATE ****  
   -->
   <!--Page Title and Links-->
   <hgroup></br>
-    <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2></br>
-    <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp;
-      <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a>
+    <h2>Community Resources Lists (Recursos Publicos): <br>Black Mountain and Swannanoa</h2></br>
+    <p><strong>Last Updated: 15 October 2024</strong></p></br></p>
+
+    <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp; <hr style="height:10px; visibility:hidden;" />
+
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a><br>
+    </br> Organizations and individuals can use this form to request supplies: <hr style="height:10px; visibility:hidden;" />
+
       <a href="https://airtable.com/appaag9If4RJvGdLf/pag6zET46pEUfCHCG/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a>
 
 
@@ -65,18 +76,12 @@ Author: Code with the Carolinas
   </hgroup>
   </br>
   <!--Mission Statement-->
-  <p></p><strong>Mission Statement:</strong></br>
-  <p>
-    The Black Mountain Volunteer Corps is a community led coalition
-    dedicated to supporting volunteer initiatives, programs and actions of
-    community service in the wake of Hurricane Helene.
-  </p></br>
+
   <!-- Last Updated Date
      **** Black Mountain Volunteer Corps to update for LAST UPDATE DATE ****  
 
    Update by Typing over the Date, this is free text so you can format date and time as see fit-->
 
-  <p><strong>Last Updated: 15 October 2024</strong></p></br></p>
 
   <!-- 4. Official Town-Direct Resources 
       **** Black Mountain Volunteer Corps to update for OFFICIAL Town Directed Resources Tables ****  
