fix formatting issues

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Author: Code with the Carolinas
             <td>130 Montreat Road Black Mountain, NC 28711</td>
             <td>Through Wednesday, 10/16/24 (<i>hasta el miercoles, 10/16/24<i></i>): 9:00 am to 3:00 pm. No services
                 provided after 10/16/2024 <i>(no se prestaron servicios después del 10/16/2024)</i>.</td>
-            <td>
+            
               <ul>
                 <li>Public info requests, volunteer coordination</li>
               </ul>
@@ -544,6 +544,13 @@ Author: Code with the Carolinas
       <table href="#subtab2-4">
         <thead>
           <tr>
+            <th>Provider</th>
+            <th>Address</th>
+            <th>Hours of Operation</th>
+
+          </tr>
+        </thead>
+          <tr>
             <td>Pet Emergency(<i>Emergencias</i>)</td>
             <td>call 828-299-1433<br />choose option 1</td>
             <td></td>
@@ -587,7 +594,7 @@ Author: Code with the Carolinas
             <th>Provider</th>
             <th>Address</th>
             <th>Hours of Operation</th>
-            <th>Resources Provided</th>
+           
           </tr>
         </thead>
         <tbody>
@@ -688,6 +695,13 @@ Author: Code with the Carolinas
       <table href="#subtab4-1">
         <thead>
           <tr>
+            <th>Provider</th>
+            <th>Address</th>
+            <th>Hours of Operation</th>
+
+          </tr>
+        </thead>
+          <tr>
             <td>Valley Hope Church</td>
             <td>115 Rockdale Rd,<br />Swannanoa, NC 28778</td>
             <td>Monday to Saturday (<i>lunes a sabado</i>): 4:00 to 6:00 pm
@@ -714,6 +728,13 @@ Author: Code with the Carolinas
     <div class="table-container">
       <table href="#subtab4-2">
         <thead>
+          <tr>
+            <th>Provider</th>
+            <th>Address</th>
+            <th>Hours of Operation</th>
+
+          </tr>
+        </thead>
           <tr>
             <td>Red Truck Men<br />The Railyard</td>
             <td>141 Richardson Blvd.<br />Black Mountain, NC 28711</td>
