--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ Author: Code with the Carolinas
     <p><strong>Last Updated: 20 October 2024</strong></p></br></p>
 
     <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> </p> </br>
-     Organizations and individuals can use the below form to request supplies: <hr style="height:10px; visibility:hidden;" /></p>
-      <a href="https://airtable.com/appaag9If4RJvGdLf/pag6zET46pEUfCHCG/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a> </p>
+     Sites participating in the Black Mountain Relief hub can use the following form to report supply shortages and surpluses: <hr style="height:10px; visibility:hidden;" /></p>
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pagVIfARLWSR1pEPu/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a> </p>
     </br>
 
       <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a></p>
