--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 This script holds the home page of the static Black Mountain Recovery website with formatting and navigation to other pages.
 Date: 2024-10-19
-Author: Code with the Carolinas 
+Author: Black Mountain Volunteer Corps; Technical implementation, Code with the Carolinas. 
 
 -->
 
@@ -66,8 +66,11 @@ Author: Code with the Carolinas
     <p><strong>Last Updated: 20 October 2024</strong></p></br></p>
 
     <p><a href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> </p> </br>
-     Sites participating in the Black Mountain Relief hub can use the following form to report supply shortages and surpluses: <hr style="height:10px; visibility:hidden;" /></p>
-      <a href="https://airtable.com/appaag9If4RJvGdLf/pagVIfARLWSR1pEPu/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a> </p>
+     Organizations and individuals can use the following form to request supplies: <hr style="height:10px; visibility:hidden;" /></p>
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pag6zET46pEUfCHCG/form" target="_blank" rel="noopener noreferrer">Supply Request Form</a> </p>
+    </br>
+    Sites participating in the Black Mountain Relief hub can use the following form to report supply shortages and surpluses: <hr style="height:10px; visibility:hidden;" /></p>
+      <a href="https://airtable.com/appaag9If4RJvGdLf/pagVIfARLWSR1pEPu/form" target="_blank" rel="noopener noreferrer">Supply Status Form</a> </p>
     </br>
 
       <a href="https://airtable.com/appaag9If4RJvGdLf/pag2UhoT0zizNnCIp/form" target="_blank" rel="noopener noreferrer">Volunteer Application</a></p>
